--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link href="src/styles.css" />
+    <link href="src\styles.css" />
     <script
       src="https://kit.fontawesome.com/095dc77733.js"
       crossorigin="anonymous"
@@ -100,7 +100,7 @@
       <hr />
       <h3>Today is pretty cold.</h3>
       <h3>Don't forget your jacket!</h3>
-      <script src="src/index.js"></script>
+      <script src="src\index.js"></script>
     </div>
   </body>
 </html>
